Allow Nexus to create a Raw Repo